ensure that images never overflow their container

--- a/regulations/static/regulations/css/less/layout.less
+++ b/regulations/static/regulations/css/less/layout.less
@@ -8,6 +8,10 @@
     width: 100%;
 }
 
+img {
+  max-width: 100%;
+}
+
 /*
 Main Content
 ============
